; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_skynet_context_endless.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_server.c_skynet_context_endless.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_context = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skynet_context_endless(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.skynet_context*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.skynet_context* @skynet_handle_grab(i32 %4)
  store %struct.skynet_context* %5, %struct.skynet_context** %3, align 8
  %6 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %7 = icmp eq %struct.skynet_context* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %14

9:                                                ; preds = %1
  %10 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %11 = getelementptr inbounds %struct.skynet_context, %struct.skynet_context* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.skynet_context*, %struct.skynet_context** %3, align 8
  %13 = call i32 @skynet_context_release(%struct.skynet_context* %12)
  br label %14

14:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.skynet_context* @skynet_handle_grab(i32) #1

declare dso_local i32 @skynet_context_release(%struct.skynet_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
